# speedgrep

./: CHANGELOG.md  CHANGELOG.txt  CONTRIBUTING.md  COPYRIGHT  Cargo.toml  README.md  speedgrep
docs/: CHANGELOG.txt  quietgrep.1  speedgrep.1
src/: lib.rs  main.rs  qg.rs
