[package]
name = "speedgrep"
version = "1.1.101"
edition = "2024"
description = "a simple grep tool"
license = "MPL-2.0"
repository = "https://github.com/G0o53/speedgrep"
homepage = "https://github.com/G0o53/speedgrep"

[lib]
name = "speedgrep"
path = "src/lib.rs"

[binary]
name = "speedgrep"
path = "src/main.rs"
