[package]
name = "speedgrep"
version = "1.1.103"
edition = "2024"
description = "a simple grep tool"
license = "MPL-2.0"
repository = "https://github.com/G0o53/speedgrep"
homepage = "https://github.com/G0o53/speedgrep"

categories = ["text-processing", "command-line-utilities", "algorithms"]
keywords = ["search", "grep", "substring", "performance"]

[lib]
name = "speedgrep"
path = "src/lib.rs"

[binary]
name = "speedgrep"
path = "src/main.rs"
