[package]
name = "speedgrep"
version = "1.3.0"
edition = "2024"
description = "a simple grep tool"
license = "MPL-2.0"
repository = "https://github.com/G0o53/speedgrep"
homepage = "https://github.com/G0o53/speedgrep"

categories = ["text-processing", "command-line-utilities", "algorithms"]
keywords = ["search", "grep", "substring", "performance"]

[lib]
name = "speedgrep"
path = "src/lib.rs"

[[bin]]
name = "speedgrep"
path = "src/main.rs"

[[bin]]
name = "quietgrep"
path = "src/qg.rs"

[profile.release]
panic = "abort"

lto = true
codegen-units = 1

opt-level = "z"
